# oemof-solph

./: .appveyor.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .flake8  .gitignore  .gitmodules  .pep8speaks.yml  .prospector.yml  .readthedocs.yaml  .readthedocs.yml  .scrutinizer.yml  .travis.yml  .travis_requirements.txt  269.requirements.txt  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Ergebnisse_BESS_BidPos50_BidNeg50.csv  LICENSE  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  ReadMe  VERSION  announcement.html  bandit.yml  config.cfg  data.json  ev_carging_graph_5.dot  handler.py  helper.py  home_pv_graph_6.dot  main.py  nose.cfg  pyproject.toml  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
ADT/: graph.py
Datamining/: API copy.py  API.py  Aktivierte aFRR betrieblich [2025-12-29 08-51-35].csv  GUI_BALANCING_CAPACITY_VOLUMES_AND_PRICES_202510312300-202511072300.csv  GUI_BALANCING_CAPACITY_VOLUMES_AND_PRICES_202511072300-202511142300.csv  GUI_BALANCING_CAPACITY_VOLUMES_AND_PRICES_202511142300-202511212300.csv  GUI_BALANCING_CAPACITY_VOLUMES_AND_PRICES_202511212300-202511282300.csv  GUI_BALANCING_CAPACITY_VOLUMES_AND_PRICES_202511282300-202511302300.csv  get_balancing_prices_simple.py  market_data.csv  test.py
Simulation/: BESS+PTH.py  BESS_FCR&aFRR.py  PowerToHeat.py  custom_constraints.py  zBESS_Arbitrage_only.py  zBESS_FCR.py
ci/: bootstrap.py
collections/: base_grid.py
dblib/: .gitignore  __init__.py  basic_functions.py  basic_pg.py  db_components.py  init_pahesmf.py  read_data_pg.py  read_weather_data.py  write_data_pg.py
default/: init_local_default.py  logging_default.conf
demandlib/: demand.py  el_load_profile.py  selp_series.csv  shlp_bdew.py
dinput/: .gitignore  __init__.py  basic_dinput_functions.py  create_lists_file.py  create_main_dc.py  create_presetting_file.py  existing_pp_capacities_file.py  parameter_corrections.py  parameter_py_file.py  read_demand_data_file.py  read_dlr_data.py  read_pahesmf.py  read_parameter_tables_file.py  read_presetting_data_file.py  read_re_data_file.py
doc/: Installation_and_setup.rst  about_oemof.rst  api.rst  blabu.rst  conf.py  dblib.rst  developer_notes.rst  developing_oemof.rst  dinput.rst  docutils.conf  feedinlib.rst  getting_started.rst  index.rst  input  input.rst  installation_and_setup.rst  make.bat  mathematical_notation.rst  meta_description.rst  meta_description.rst~  model_description.rst  modules.rst  oemof_core.rst  oemof_network.rst  oemof_outputlib.rst  oemof_solph.rst  oemof_solph_dev.rst  oemof_tools.rst  outputlib.rst  overview.rst  solph.rst  using_oemof.rst  whats_new.rst
docs/: about_oemof.rst  advanced_tutorials.rst  api.rst  basic_concepts.rst  best_practices.rst  changelog.rst  conf.py  examples.rst  getting_started.rst  index.rst  installation.rst  installation_and_setup.rst  introduction.rst  introductory_tutorials.rst  oemof_outputlib.rst  oemof_solph.rst  oemof_tools.rst  old_usage.rst  optimization.rst  recipe_book.rst  requirements.txt  results.rst  showcase_examples.rst  support.rst  tutorials.rst  usage.rst  using_oemof.rst
entities/: base_entity.py
examples/: check_examples.py  example_app.py  example_app_sc160.py  example_data.csv  example_data_entsoe.csv  example_demandlib.py  example_tests.py  examples.py  multiple_energysystems_simple.py  multiple_energysystems_simple_optimization.py  oemof_full_check.py  oemof_full_test.py  solph_simple_least_cost.py  solph_update_objective.py  test_demandlib.py  test_installation.py  two_regions_example.py
examples offsetInvestor/: Speichertest2.csv  Speichertest_inv.csv  os_invest_test.py  xmpl_stor_offset_inv.py
feedinlib/: .gitmodules  __init__.py  base_feed.py  basefeed.py  example_script_single_point.py  feedin.py  pv_feed.py  pv_feedin_file.py  pvfeed.py  pvlib_bsp_multi_data.py  wind_feed.py  windfeed.py
grids/: base_grid.py  grid_factory.py  regional_grid.py
guilib/: .gitignore  db_components.py  example_coms_and_patterns.py  example_only_coms.py  gui_TableEditor.py  gui_components.py
html/: api-objects.txt  class-tree.html  help.html  identifier-index.html  index.html  module-tree.html  oemof-module.html  oemof-pysrc.html  oemof.ADT-module.html  oemof.ADT-pysrc.html  oemof.ADT.graph-module.html  oemof.ADT.graph-pysrc.html  oemof.ADT.graph.Edge-class.html  oemof.ADT.graph.Graph-class.html  oemof.ADT.graph.Vertex-class.html  oemof.entities-module.html  oemof.entities-pysrc.html  oemof.entities.base_entity-module.html  oemof.entities.base_entity-pysrc.html  oemof.entities.base_entity.Entity-class.html  oemof.entities.consumer-module.html  oemof.entities.consumer-pysrc.html  oemof.entities.consumer.base_consumer-module.html  oemof.entities.consumer.base_consumer-pysrc.html  oemof.entities.consumer.base_consumer.Consumer-class.html  oemof.entities.consumer.city-module.html  oemof.entities.consumer.city-pysrc.html  oemof.entities.consumer.city.City-class.html  oemof.entities.consumer.industrial_area-module.html  oemof.entities.consumer.industrial_area-pysrc.html  oemof.entities.consumer.industrial_area.IndustrialArea-class.html  oemof.entities.producer-module.html  oemof.entities.producer-pysrc.html  oemof.entities.producer.base_producer-module.html  oemof.entities.producer.base_producer-pysrc.html  oemof.entities.producer.base_producer.Producer-class.html  oemof.entities.producer.nuclear_powerplant-module.html  oemof.entities.producer.nuclear_powerplant-pysrc.html  oemof.entities.producer.nuclear_powerplant.NuclearPowerplant-class.html  oemof.entities.producer.photovoltaic_powerplant-module.html  (+104 more)
htmlcov/: class_index.html  function_index.html  index.html  src_oemof_solph___init___py.html  status.json  z_0144dbb63943ee6f___init___py.html  z_0144dbb63943ee6f__console_scripts_py.html  z_0144dbb63943ee6f__energy_system_py.html  z_0144dbb63943ee6f__groupings_py.html  z_0144dbb63943ee6f__helpers_py.html  z_0144dbb63943ee6f__models_py.html  z_0144dbb63943ee6f__options_py.html  z_0144dbb63943ee6f__plumbing_py.html  z_0144dbb63943ee6f__results_py.html  (+29 more)
(+1266 files in other folders)
